# IntersonManager

./: .gitignore  CMakeLists.txt  IntersonManager.cpp  IntersonManager.h  IntersonManagerTest.cpp  IntersonManagerTest.h  README.md  USSpectrascopy.cpp  USSpectroscopy.cpp  ezusb.c  fxload.c  listdevs.c  main.cpp
CMake/Modules/: FindLibUSB.cmake
